project09/src/main/java/com/example/project09/error/exception/BusinessException.java
package com.example.project09.error.exception;

import com.example.project09.error.ErrorCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class BusinessException extends RuntimeException {
    private final ErrorCode errorCode;
}
